--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.4.1",
+    "firebase": "^10.7.2",
+    "perfect-scrollbar": "^1.5.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -17,6 +21,8 @@
     "react-player": "^2.11.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
+    "recoil": "^0.7.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
